# AEF-CI

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  Toolchain-GCC-ARM.cmake  Toolchain-GCC-x86_64.cmake  conanfile.py  declarative_pipeline_seems_ok  exports_just_one_package  parallel_declarative_seems_ok  pipeline_w_conan_seems_ok  practice_pipeline_script_upload  worked_once
include/: aefBase.h  aefMutexInterface.h  aefPktInterface.h  aefQueueTaskInterface.h  aefSerialInterface.h  aefTaskInterface.h  aefTaskMessageInterface.h  aefTaskSafeInterface.h  aefTcpServerInterface.h  aefTimerInterface.h  aefTypes.h
include/Linux/: aefException.h  aefLinuxTypes.h  aefMutex.h  aefQueueTask.h  aefSerial.h  aefTask.h  aefTaskMessage.h  aefTaskSafe.h  aefTcpServer.h  aefTimer.h
source/: .directory  CMakeLists.txt  TC-AEF.cmake
source/AefLib/: CMakeLists.txt  aefBase.h  aefMutexBase.cpp  aefMutexBase.h  aefPktBase.h  aefQueueTaskBase.cpp  aefQueueTaskBase.h  aefSerialBase.cpp  aefSerialBase.h  aefTaskBase.cpp  aefTaskBase.h  aefTaskMessage.h  aefTaskMessageBase.cpp  aefTaskMessageBase.h  aefTaskSafeBase.cpp  aefTaskSafeBase.h  aefTcpServerBase.cpp  aefTcpServerBase.h  aefTimerBase.cpp  aefTimerBase.h  aefTypes.h  aefTypesBase.h
source/AefLib/Linux/: .directory  aefException.cpp  aefException.h  aefMutex.cpp  aefMutex.h  aefQueueTask.cpp  aefQueueTask.h  aefSerial.cpp  aefSerial.h  aefTask.cpp  aefTask.h  aefTaskSafe.cpp  aefTaskSafe.h  aefTcpServer.cpp  aefTcpServer.h  aefTimer.cpp  aefTimer.h  zzzCMakeLists.txt
src/: README.md
src/AefLib/: CMakeLists.txt
src/AefLib/Linux/: aefException.cpp  aefMutex.cpp  aefQueueTask.cpp  aefSerial.cpp  aefTask.cpp  aefTaskMessage.cpp  aefTaskSafe.cpp  aefTcpServer.cpp  aefTimer.cpp
test/: CMakeLists.txt  ExceptionTests.cpp  MutexTests.cpp  QueueTaskTests.cpp  TimerTests.cpp  conanfile.txt
